--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PulsecounterPublisher",
+  "name": "pulsecounter-publisher",
   "version": "0.0.1",
   "main": "server.js",
   "scripts": {
